--- a/08-online-auction-system/pom.xml
+++ b/08-online-auction-system/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.lld.trafficmgmt</groupId>
-    <artifactId>08-online-action-system</artifactId>
+    <artifactId>08-online-auction-system</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
